--- a/index.html
+++ b/index.html
@@ -5,13 +5,71 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="./style.css" rel="stylesheet" type="text/css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+  <style>
+    .form-container {
+      display: none;
+    }
+    .active {
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
-  <a href="./public/login.html">Link to login </a>
+  <div class="wrapper">
+    <!-- Login Form -->
+    <div id="login-container" class="form-container active">
+      <form>
+        <h1>Login</h1>
+        <div class="input-box">
+          <input type="text" placeholder="Username" required>
+          <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-box">
+          <input type="password" placeholder="Password" required>
+          <i class='bx bx-lock'></i>
+        </div>
+        <div class="remember-forgot">
+          <label><input type="checkbox">Remember me</label>
+          <a href="#">Forgot Password?</a>
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <div class="register-link">
+          <p>Don't have an account? <a href="#" onclick="toggleForms()">Register</a></p>
+        </div>
+      </form>
+    </div>
+
+    <!-- Registration Form -->
+    <div id="register-container" class="form-container">
+      <form>
+        <h1>Register</h1>
+        <div class="input-box">
+          <input type="text" placeholder="Username" required>
+          <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-box">
+          <input type="password" placeholder="Password" required>
+          <i class='bx bx-lock'></i>
+        </div>
+        <div class="input-box">
+          <input type="email" placeholder="Email" required>
+          <i class='bx bx-envelope'></i>
+        </div>
+        <button type="submit" class="btn">Register</button>
+        <div class="register-link">
+          <p>Already have an account? <a href="#" onclick="toggleForms()">Login</a></p>
+          <a href="./public/profile.html" style="color: white;">Profile Page</a>
+
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="./script.js"></script>
+
 </body>
 
 </html>
