--- a/public/profile.html
+++ b/public/profile.html
@@ -7,6 +7,11 @@
   <title>Profile Management</title>
   <link href="../style.css" rel="stylesheet" type="text/css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Select CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -34,7 +39,7 @@
         <input placeholder="City" id="city" name="city" maxlength="100">
       </div>
 
-      <div class="input-box">
+ <!--   <div class="input-box custom-select">
         <label for="state">State</label>
         <select id="state" name="state" required>
           <option value="">Select State</option>
@@ -47,14 +52,14 @@
           <option value="CO">Colorado</option>
           <option value="CT">Connecticut</option>
           <option value="DE">Delaware</option>
-          <option value="DC">District of Columbia	</option>
+          <option value="DC">District of Columbia</option>
           <option value="FL">Florida</option>
           <option value="GA">Georgia</option>
           <option value="GU">Guam</option>
           <option value="HI">Hawaii</option>
           <option value="ID">Idaho</option>
           <option value="IL">Illinois</option>
-          <option value="IN">Indiana	</option>
+          <option value="IN">Indiana</option>
           <option value="IA">Iowa</option>
           <option value="KS">Kansas</option>
           <option value="KY">Kentucky</option>
@@ -66,7 +71,7 @@
           <option value="MN">Minnesota</option>
           <option value="MS">Mississippi</option>
           <option value="MO">Missouri</option>
-          <option value="MT">Montana-</option>
+          <option value="MT">Montana</option>
           <option value="NE">Nebraska</option>
           <option value="NV">Nevada</option>
           <option value="NH">New Hampshire</option>
@@ -105,17 +110,26 @@
       <div class="input-box">
         <label for="skills">Skills</label>
         <select id="skills" name="skills" multiple required>
-          <!-- Add skill options here -->
           <option value="coding">Add more options here!!!</option>
           <option value="coding">Coding</option>
           <option value="management">Management</option>
           <option value ="leadership">Leadership</option>
-          <!-- Add other skills -->
         </select>
       </div>
+    -->
+
+    <div class="input-box">
+      <label for="skills"></label>
+      <select id="skills" name="skills" class="selectpicker" multiple data-live-search="true" required title="Select one or more">
+        <option value="coding">Coding</option>
+        <option value="management">Management</option>
+        <option value="leadership">Leadership</option>
+        <!-- Add other skills here -->
+      </select>
+    </div>
 
       <div class="input-box">
-        <label for="availability">Availability</label>
+        <label for="availability"></label>
         <input type="date" id="availability" name="availability" required>
       </div>
 
@@ -124,6 +138,12 @@
   </div>
 
   <script src="script.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap Select JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"></script>
 </body>
 
 </html>
