--- a/public/profile.html
+++ b/public/profile.html
@@ -7,11 +7,6 @@
   <title>Profile Management</title>
   <link href="../style.css" rel="stylesheet" type="text/css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap Select CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -20,34 +15,36 @@
       <h1>Complete Your Profile</h1>
 
       <div class="input-box">
-        <input placeholder="First Name" id="first-name" name="full-name" maxlength="50" required>
-      </div>
-      
-      <div class="input-box">
-        <input placeholder="Last Name" id="last-name" name="full-name" maxlength="50" required>
+        <input placeholder="First Name" id="first-name" name="first-name" maxlength="50" required>
       </div>
 
       <div class="input-box">
-        <input placeholder="Address 1" id="address1" name="full-name" maxlength="50" required>
+        <input placeholder="Last Name" id="last-name" name="last-name" maxlength="100" required>
       </div>
 
       <div class="input-box">
-        <input placeholder="Address 2" id="address2" name="full-name" maxlength="100">
+        <input placeholder="Address 1" id="address1" name="address1" maxlength="100" required>
       </div>
 
       <div class="input-box">
-        <input placeholder="City" id="city" name="city" maxlength="100">
+        <input placeholder="Address 2" id="address2" name="address2" maxlength="100">
       </div>
 
- <!--   <div class="input-box custom-select">
-        <label for="state">State</label>
-        <select id="state" name="state" required>
+      <div class="input-box">
+        <input placeholder="City" id="city" name="city" maxlength="100" required>
+      </div>
+
+      <div class="input-box">
+        <input placeholder="Zip Code" id="zip" name="zip" maxlength="5" required>
+      </div>
+
+      <div class="input-box">
+        <select id="select-menus" name="state" required>
           <option value="">Select State</option>
           <option value="AL">Alabama</option>
           <option value="AK">Alaska</option>
           <option value="AZ">Arizona</option>
           <option value="AR">Arkansas</option>
-          <option value="AS">American Samoa</option>
           <option value="CA">California</option>
           <option value="CO">Colorado</option>
           <option value="CT">Connecticut</option>
@@ -55,7 +52,6 @@
           <option value="DC">District of Columbia</option>
           <option value="FL">Florida</option>
           <option value="GA">Georgia</option>
-          <option value="GU">Guam</option>
           <option value="HI">Hawaii</option>
           <option value="ID">Idaho</option>
           <option value="IL">Illinois</option>
@@ -80,22 +76,18 @@
           <option value="NY">New York</option>
           <option value="NC">North Carolina</option>
           <option value="ND">North Dakota</option>
-          <option value="MP">Northern Mariana Islands</option>
           <option value="OH">Ohio</option>
           <option value="OK">Oklahoma</option>
           <option value="OR">Oregon</option>
           <option value="PA">Pennsylvania</option>
-          <option value="PR">Puerto Rico</option>
           <option value="RI">Rhode Island</option>
           <option value="SC">South Carolina</option>
           <option value="SD">South Dakota</option>
           <option value="TN">Tennessee</option>
           <option value="TX">Texas</option>
-          <option value="TT">Trust Territories</option>
           <option value="UT">Utah</option>
           <option value="VT">Vermont</option>
           <option value="VA">Virginia</option>
-          <option value="VI">Virgin Islands</option>
           <option value="WA">Washington</option>
           <option value="WV">West Virginia</option>
           <option value="WI">Wisconsin</option>
@@ -104,46 +96,35 @@
       </div>
 
       <div class="input-box">
-        <input placeholder="Zip Code" id="zip" name="zip" maxlength="6">
-      </div>
-
-      <div class="input-box">
-        <label for="skills">Skills</label>
-        <select id="skills" name="skills" multiple required>
-          <option value="coding">Add more options here!!!</option>
-          <option value="coding">Coding</option>
+        <select id="skill-select" name="skills" required>
+          <option value="">Select Skill</option>
           <option value="management">Management</option>
-          <option value ="leadership">Leadership</option>
+          <option value="leadership">Leadership</option>
+          <option value="design">Design</option>
+          <option value="communication">Communication</option>
         </select>
+
+        <button class="skill-add">Add</button>
       </div>
-    -->
 
-    <div class="input-box">
-      <label for="skills"></label>
-      <select id="skills" name="skills" class="selectpicker" multiple data-live-search="true" required title="Select one or more">
-        <option value="coding">Coding</option>
-        <option value="management">Management</option>
-        <option value="leadership">Leadership</option>
-        <!-- Add other skills here -->
-      </select>
-    </div>
+      <div id="skill-list">
+        <!-- Dynamically added skills will appear here -->
+      </div>
 
-      <div class="input-box">
-        <label for="availability"></label>
+      <div class="input-box date-box">
+        <label for="availability">Availability:</label>
         <input type="date" id="availability" name="availability" required>
+      </div>
+
+      <div id="date-list">
+        <!-- Dynamically added dates will appear here -->
       </div>
 
       <button type="submit" class="btn">Save Profile</button>
     </form>
   </div>
 
-  <script src="script.js"></script>
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-  <!-- Bootstrap Select JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
