Added Partial Event Page

--- a/public/profile.html
+++ b/public/profile.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <title>Profile Management</title>
   <link href="../style.css" rel="stylesheet" type="text/css" />
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -98,10 +97,10 @@
       <div class="input-box">
         <select id="skill-select" name="skills" required>
           <option value="">Select Skill</option>
-          <option value="management">Management</option>
-          <option value="leadership">Leadership</option>
-          <option value="design">Design</option>
-          <option value="communication">Communication</option>
+          <option value="Management">Management</option>
+          <option value="Leadership">Leadership</option>
+          <option value="Design">Design</option>
+          <option value="Communication">Communication</option>
         </select>
 
         <button class="skill-add">Add</button>
